--- a/angular/example.html
+++ b/angular/example.html
@@ -32,7 +32,7 @@
 
     <div class="container" ng-controller="AngularCtrl">
 
-        <div class="row" style="text-align: center; margin-top: 200px;">
+        <div class="row" style="text-align: center; margin-top: 125px;">
 
             <h1 style="margin-bottom: 20px;">Crazy, super basic, Angular Example!</h1>
 
@@ -41,7 +41,7 @@
                 <h3 style="color: #999; margin-top: 0;"><span>{{</span> greeting <span>}} {{</span> subject <span>}}{{</span> punctuation <span>}}</span></h3>
             </div>
 
-            <h1 class="span12" style="margin: 0 0 10px 15px;">{{ greeting }} 
+            <h1 class="span12" style="margin: 50px 0 10px 15px;">{{ greeting }} 
             
                 <span ng-class="{ hightlight: hilite }">{{ subject }}</span>
 
