adding more slides, cleaning up transitions

--- a/angular/index.html
+++ b/angular/index.html
@@ -238,7 +238,7 @@
                 data-y="-6050" 
                 data-z="-10000" 
                 data-scale="3" 
-                data-rotate="0">
+                data-rotate="45">
                 <a href="/angular/example.html">Simple Example</a>
             </div>
 
@@ -256,6 +256,21 @@
                     <li>NetTuts - Building a webapp from scratch: <a href="http://net.tutsplus.com/tutorials/javascript-ajax/building-a-web-app-from-scratch-in-angularjs/">http://net.tutsplus.com/tutorials/javascript-ajax/building-a-web-app-from-scratch-in-angularjs</a></li>
                     <li>AngularUI Module Source: <a href="https://github.com/angular-ui/ui-utils/tree/master/modules">https://github.com/angular-ui/ui-utils/tree/master/modules</a></li>
                     <li>AngularJS API Documentation (meh): <a href="http://docs.angularjs.org/api/">http://docs.angularjs.org/api/</a></li>
+                </ul>
+            </div>
+
+            <div id="next" class="step slide" 
+                data-x="-10000" 
+                data-y="0" 
+                data-z="0" 
+                data-scale="10" 
+                data-rotate="90">
+                <h1>So what's next?</h1>
+                <ul style="font-size: 2em;">
+                    <li>Routing and Templates</li>
+                    <li>Directives</li>
+                    <li>Services/Factories</li>
+                    <li>Filters</li>
                 </ul>
             </div>
 
