--- a/angular/index.html
+++ b/angular/index.html
@@ -49,7 +49,9 @@
                 data-z="-500" 
                 data-scale="1">
 
-                <h1><small>I'm</small> Josey Morton</h1>
+                <h1>
+                    <img src="https://sphotos-b-ord.xx.fbcdn.net/hphotos-ash4/427354_10151090223231195_1607203434_n.jpg" alt="">
+                    <small style="position: absolute; top: 82px; left: 302px;">I'm</small> Josey Morton</h1>
                 <ul>
                     <li>Front End-gineer,</li>
                     <li><a href="http://www.github.com/angular-ui">AngularUI</a> team member,</li>
