--- a/angular/index.html
+++ b/angular/index.html
@@ -109,7 +109,7 @@
                 <div class="bubble">
                     <h2>Model</h2>
                     <p>The model represents your applications data.</p>
-                    <p>Data sources, API requests, databases.</p>
+                    <p>Data sources, API requests, databases, hashes, arrays ...</p>
                 </div>
             </div>
             
@@ -154,9 +154,11 @@
                 <h1 style="display: inline">AngularJS <h2 style="float: right; margin-top: 0">is Different</h2></h1>
                 <ul>
                     <li>Two-Way Data Binding</li>
-                    <li>Opinionated - There's a right way and a wrong way</li>
-                    <li>Feels like your writing HTML</li>
+                    <li>Opinionated - There's generally a right way and a wrong way.</li>
+                    <li>Feels like your just writing HTML</li>
                     <li>Does almost ALL the heavy lifting</li>
+                    <li>No required dependancies to get started</li>
+                    <li>JQuery built in. <small style="color: #666">( Actually its jqlite, but still... )</small></li>
                 </ul>
             </div>
 
@@ -169,8 +171,8 @@
                 <h1>WTF is Two-Way Data Binding?!</h1>
                 <ul style="margin-left: 20px;">
                     <li>Your browser compiles and renders a template. <h4>... Duh ...</h4></li>
-                    <li>Angular watches this template, creating a "live view". <h4>shenanigans!</h4></li>
-                    <li>Changes to the model are instantly reflected in the "live view"! <h4>Lies!</h4></li>
+                    <li>Angular watches these templates, creating a "live view". <h4>shenanigans!</h4></li>
+                    <li>Changes to the model are instantly reflected in the "live view"! <h4>Lies! Foolishness!</h4></li>
                 </ul>
             </div>
 
@@ -180,6 +182,7 @@
                 data-z="-1020" 
                 data-scale=".0001" 
                 data-rotate="0">
+                <h2 style="margin-bottom: 15px;">It's true!</h2>
                 <img src="http://i.qkme.me/3vj96k.jpg" alt="">
                 <h5>I'll prove it shortly!</h5>
             </div>
