--- a/angular/index.html
+++ b/angular/index.html
@@ -39,12 +39,12 @@
                 data-y="0" 
                 data-z="800"
                 data-scale="10">
-        		<h1>Intro to <img src="http://angularjs.org/img/AngularJS-large.png" alt="AngularJS"></h1>
+        		<h1>Jumping into <img src="http://angularjs.org/img/AngularJS-large.png" alt="AngularJS"></h1>
         		<cite>Sloppily presented by <a href="http://www.github.com/joseym">Josey Morton</a></cite>
     		</div>
 
             <div id="me" class="step slide" 
-                data-x="2735" 
+                data-x="4000" 
                 data-y="-365" 
                 data-z="-500" 
                 data-scale="1">
